<resources>
    <string name="app_name">Sathi TV</string>

    <string name="gcm_send_message">Token retrieved. You can now send token to server.</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token.</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_janam_kundali">Janam Kundali Reply</string>
    <string name="drawer_item_photo_gallery">Photo Gallery</string>
    <string name="drawer_item_health_consultant">Health Consultant Reply</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_feedback">Feedback</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_logout">Logout</string>

    <string name="homescreen_banner_text">Banners and video will go here</string>
    <string name="dashboard_channels">Channels</string>
    <string name="dashboard_chitchat">Model ChitChat</string>
    <string name="dashboard_entertainment">Entertainment</string>
    <string name="dashboard_interviews">NRN Bishes</string>
    <string name="dashboard_news">News</string>
    <string name="dashboard_model_chitchat">Model ChitChat</string>
    <string name="dashboard_janam_kundali">Janam Kundali</string>
    <string name="dashboard_astrology">Astrology</string>
    <string name="dashboard_health_consultant">Health Consultant</string>
    <string name="horoscope">Horoscope</string>
    <string name="app_id">1689288941327779</string>

    <string name="error_network_connection">Please check your internet connection</string>

    <string name="prompt_login_title">Login</string>
    <string name="prompt_login_cancel">Cancel</string>
    <string name="prompt_login_ok">Login</string>
    <string name="message_getting_interviews">Loading Interviews…</string>
    <string-array name="country_array">
        <!-- <item>Country</item> -->
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas, The</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire (Ivory Coast)</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia, The</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea, North</item>
        <item>Korea, South</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar (Burma)</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Barthelemy</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste (East Timor)</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tristan da Cunha</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

    <string name="description">Media Controls</string>
    <string name="title_activity_interview">Interviews</string>
    <string name="title_activity_health_consultant">Health Consultant</string>
    <string name="title_description">Description</string>
    <string name="prompt_message">Message</string>
    <string name="prompt_symptoms">Symptoms</string>
    <string name="prompt_subject">Subject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_subject_required">Subject cannot be empty.</string>
    <string name="error_message_required">Message cannot be empty</string>
    <string name="title_activity_janam_kundali_reply">JanamKundaliReplyActivity</string>
    <string name="title_activity_youtube_player">YoutubePlayerActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_user_type">UserTypeActivity</string>
    <string name="title_view_all_photos">Photos</string>

    <string name="message_getting_news">Loading news...</string>
    <string name="health_consultant_upload">Upload image \n (if possible)</string>
    <string name="title_activity_news_web_view">NewsWebViewActivity</string>
    <string name="message_loading">Loading...</string>


    <!-- model list string-->
    <string name="message_getting_model_list">Loading model list..</string>
    <string name="title_activity_model_list">ModelListActivity</string>
    <string name="message_model_no_data">No models available</string>
    <string name="title_activity_show_all_photos">ShowAllPhotosActivity</string>

    <!-- chat strings-->
    <string name="title_activity_chat">ChatActivity</string>
    <string name="message_no_chat_list">No previous message found</string>
    <string name="chat_message_loading">Loading messages...</string>
    <string name="chat_message_sending">Sending message...</string>

    <!--logout strings-->
    <string name="message_logging_out">Logging out…</string>
    <string name="message_logged_out">Logged out</string>
    <string name="title_activity_cheena_preview">Your cheena</string>

    <string name="title_welcome">Welcome</string>
    <string name="title_vod">VOD</string>
    <string name="title_mod">MOD</string>
    <string name="title_nrn_bishes">NRN Bishes</string>


</resources>
