<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_1_drawer"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:checked="true"
            android:icon="@drawable/ic_drawer_home"
            android:title="@string/drawer_item_home" />
     <!--   <item
            android:id="@+id/navigation_item_janam_kundali"
            android:icon="@drawable/ic_drawer_janam_kundali"
            android:title="@string/drawer_item_janam_kundali" />
-->
    <!--
        <item
            android:id="@+id/navigation_item_photo_gallery"
            android:icon="@drawable/ic_drawer_photo_gallery"
            android:title="@string/drawer_item_photo_gallery" />
     -->

      <!--  <item
            android:id="@+id/navigation_item_health_consultant"
            android:icon="@drawable/ic_drawer_health_consultant"
            android:title="@string/drawer_item_health_consultant" />-->

    </group>
    <group
        android:id="@+id/group_2_drawer"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/drawer_item_settings" />
        <item
            android:id="@+id/navigation_item_feedback"
            android:icon="@drawable/ic_drawer_feedback"
            android:title="@string/drawer_item_feedback" />
        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/ic_drawer_about"
            android:title="@string/drawer_item_about" />

        <item
            android:id="@+id/navigation_item_logout"
            android:icon="@drawable/ic_drawer_logout"
            android:title="@string/drawer_item_logout" />
    </group>
</menu>