<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="2"
        app:rowCount="4"
        tools:context="com.shirantech.sathitv.fragment.HomeScreenFragment">

        <com.shirantech.sathitv.widget.FixedAspectRatioFrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_columnSpan="2">

            <FrameLayout
                android:id="@+id/frameLayoutBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/circlePagerIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:gravity="bottom"
                    android:padding="4dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    app:radius="5dp" />

                <com.shirantech.sathitv.widget.CustomProgressView
                    android:id="@+id/progress_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

            </FrameLayout>

        </com.shirantech.sathitv.widget.FixedAspectRatioFrameLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/dashboard_channels"
            android:layout_width="0dp"
            android:layout_height="90dp"
            app:cardCornerRadius="@dimen/default_gap"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/dashboard_selector"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:src="@drawable/ic_dashboard_live_stream"
                android:tint="@color/primary_dark" />

            <com.shirantech.sathitv.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_red_curve"
                android:gravity="center"
                android:maxLines="1"
                android:padding="1dp"
                android:text="@string/dashboard_channels"
                android:textColor="@color/primary_text_inverse"
                android:textSize="10sp" />

        </android.support.v7.widget.CardView >

        <android.support.v7.widget.CardView
            app:cardCornerRadius="@dimen/default_gap"
            android:id="@+id/dashboard_entertainment"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/dashboard_selector"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:src="@drawable/ic_dashboard_entertainment"
                android:tint="@color/primary_dark" />

            <com.shirantech.sathitv.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_red_curve"
                android:gravity="center"
                android:maxLines="1"
                android:padding="1dp"
                android:text="@string/dashboard_entertainment"
                android:textColor="@color/primary_text_inverse"
                android:textSize="10sp" />

        </android.support.v7.widget.CardView >
        <android.support.v7.widget.CardView
            app:cardCornerRadius="@dimen/default_gap"
            android:id="@+id/dashboard_health_consultant"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/dashboard_selector"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:src="@drawable/ic_dashboard_health_consultant"
                android:tint="@color/primary_dark" />

            <com.shirantech.sathitv.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_red_curve"
                android:gravity="center"
                android:maxLines="1"
                android:padding="1dp"
                android:text="@string/dashboard_health_consultant"
                android:textColor="@color/primary_text_inverse"
                android:textSize="10sp" />

        </android.support.v7.widget.CardView >
        <android.support.v7.widget.CardView
            app:cardCornerRadius="@dimen/default_gap"
            android:id="@+id/dashboard_kundali"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/dashboard_selector"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:src="@drawable/ic_dashboard_janam_kundali"
                android:tint="@color/primary_dark" />

            <com.shirantech.sathitv.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_red_curve"
                android:gravity="center"
                android:maxLines="1"
                android:padding="1dp"
                android:text="@string/dashboard_astrology"
                android:textColor="@color/primary_text_inverse"
                android:textSize="10sp" />

        </android.support.v7.widget.CardView >
        <android.support.v7.widget.CardView
            app:cardCornerRadius="@dimen/default_gap"
            android:id="@+id/dashboard_news"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/dashboard_selector"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:src="@drawable/ic_dashboard_news"
                android:tint="@color/primary_dark" />

            <com.shirantech.sathitv.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_red_curve"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/dashboard_news"
                android:padding="1dp"
                android:textColor="@color/primary_text_inverse"
                android:textSize="10sp" />

        </android.support.v7.widget.CardView >


        <android.support.v7.widget.CardView
            app:cardCornerRadius="@dimen/default_gap"
            android:id="@+id/dashboard_model_chitchat"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/dashboard_selector"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:src="@drawable/ic_dashboard_chitchat"
                android:tint="@color/primary_dark" />

            <com.shirantech.sathitv.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_red_curve"
                android:gravity="center"
                android:maxLines="1"
                android:padding="1dp"
                android:text="@string/dashboard_chitchat"
                android:textColor="@color/primary_text_inverse"
                android:textSize="10sp" />

        </android.support.v7.widget.CardView >


    </android.support.v7.widget.GridLayout>
</ScrollView>